# Omniproctor

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
Browser/: .gitignore  OmniProctorBrowser.iss  OmniProctorBrowser.spec  README.md  pyproject.toml
Browser/browser/: keyblocks.py  log_setup.py  main.py  protocol_handler.py  web_profile.py  win11_compat.py
Browser/browser/network/: native_firewall_controller.py  wfp_native.py
Browser/browser/security/: __init__.py  suspicious_procs.py  vm_detect.py
Browser/browser/telemetry/: __init__.py  config.py  event_bus.py  keystroke_logger.py  poster.py  warning_poller.py
Browser/browser/ui/: __init__.py  dialogs.py  splash.py  theme.py  theme.qss  top_bar.py  warning_banner.py
WebClient/: .dockerignore  .env.example  AZURE_DEPLOY.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.tls.yml  docker-compose.yml  pyproject.toml  requirements.txt
WebClient/app/: main.py
WebClient/app/api/: deps.py
WebClient/app/controllers/: assignment_controller.py  auth_controller.py  dashboard_controller.py  download_controller.py  test_controller.py  user_controller.py
WebClient/app/core/: config.py  security.py
WebClient/app/db/: base.py
WebClient/app/models/: __init__.py  assignment.py  behavior_event.py  proctor_warning.py  test.py  test_attempt.py  user.py
WebClient/app/schemas/: assignment.py  attempt.py  auth.py  behavior.py  dashboard.py  download.py  live.py  test.py  user.py  warning.py
WebClient/app/services/: assignment_service.py  attempt_service.py  auth_service.py  risk_scorer.py  (+5 more)
WebClient/frontend/: .dockerignore  .env.example  Dockerfile  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json
WebClient/installers/: README.md
WebClient/tests/: conftest.py
(+84 files in other folders)
