[project]
name = "omniproctor-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "interception>=0.6.0",
    "keyboard>=0.13.5",
    "psutil>=7.1.0",
    "pycryptodome>=3.23.0",
    "pydantic>=2.12.2",
    "pyqt6>=6.10.0",
    "pyqt6-webengine>=6.10.0",
    "pyuac>=0.0.3",
    "pywin32>=311",
    "ruff>=0.14.0",
]

# Build-time tooling. Install with `uv sync --extra build` before running
# `uv run pyinstaller OmniProctorBrowser.spec`. Keeping pyinstaller in the
# project metadata (rather than `pip install pyinstaller` globally)
# guarantees it executes inside the venv that has PyQt6 installed; if it
# runs against any other interpreter the resulting EXE ships *without*
# PyQt6 and crashes on first launch with
# `ModuleNotFoundError: No module named 'PyQt6'`.
[project.optional-dependencies]
build = [
    "pyinstaller>=6.10.0",
]
